# pyright-ui-test-poc

./: .gitignore  README.md  pyproject.toml  tasks.py
pyright_ui_test_poc/: __init__.py
tests/: conftest.py  test_examples.py
tests/_test_utils/: test_typechecker.py  test_typechecker_ui_testing.py  typechecker.py  typechecker_ui_testing.py
tests/_test_utils/snapshots/test_typechecker/test__check_snippet__identifies_failing_typecheck/: test__check_snippet__identifies_failing_typecheck.txt
tests/_test_utils/snapshots/test_typechecker/test__check_snippet__imports_local_files/: test__check_snippet__imports_local_files.txt
tests/_test_utils/snapshots/test_typechecker_ui_testing/test__typecheck_snapshot_fixture__handles_multiple_snapshots/: test__typecheck_snapshot_fixture__handles_multiple_snapshots_2.txt
tests/_test_utils/snapshots/test_typechecker_ui_testing/test__typecheck_snapshot_fixture__identifies_failing_typecheck/: test__typecheck_snapshot_fixture__identifies_failing_typecheck.txt
tests/_test_utils/snapshots/test_typechecker_ui_testing/test__typecheck_snapshot_fixture__identifies_passing_typecheck/: test__typecheck_snapshot_fixture__identifies_passing_typecheck.txt
tests/snapshots/test_examples/test__basic_fixture_snapshot_test/: test__basic_fixture_snapshot_test.txt
tests/snapshots/test_examples/test__reveal_type/: test__reveal_type.txt
